added .env file

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-URL = "mongodb+srv://sushilsuman2355:FM6bCkw5tnSSByT6@nibha.8mhsh.mongodb.net/devTinder"
+PORT = 4000
+DB_URL = "mongodb+srv://sushilsuman2355:FM6bCkw5tnSSByT6@nibha.8mhsh.mongodb.net/devTinder"
+JWT_SECRET = "Nibha@Tinder"
